# kwiver

./: .travis.yml  CMakeLists.txt
.travis/: update-cmake.sh
CMake/: kwiver-setup-python.cmake  kwiver-setup-tests-python.cmake
CMake/utils/: kwiver-config-venv.cmake  kwiver-utils-python.cmake  kwiver-utils-tests-python.cmake
arrows/core/: CMakeLists.txt  register_algorithms.cxx  video_input_image_list.cxx
doc/release-notes/: master.txt
python/: CMakeLists.txt  README.md  requirements.txt  setup.py
python/kwiver/: CMakeLists.txt
python/kwiver/vital/algo/: CMakeLists.txt  algorithm_factory.cxx  algorithm_module.cxx  analyze_tracks.cxx  image_filter.cxx  video_input.cxx
python/kwiver/vital/algo/trampoline/: analyze_tracks_trampoline.txx  image_filter_trampoline.txx  write_object_track_set_trampoline.txx  write_track_descriptor_set_trampoline.txx
python/kwiver/vital/algo/wrappers/: algo_mod_wrapper.yml
python/kwiver/vital/tests/: CMakeLists.txt  helpers.py  test_activity.py  test_algorithms_common.py  test_associate_detections_to_tracks.py  test_bounding_box.py  test_color.py  test_compute_association_matrix.py  test_covariance.py  test_descriptor.py  test_detected_object_set.py  test_image_object_detector.py  test_landmark.py  test_landmark_map.py  test_match_set.py  test_mesh.py  test_object_track_set.py  test_object_track_state.py  test_transform_2d_io.py  test_write_object_track_set.py  test_write_track_descriptor_set.py
python/kwiver/vital/tests/algorithms/: CMakeLists.txt  simple_associate_detections_to_tracks.py  simple_bundle_adjust.py  simple_compute_association_matrix.py  simple_image_object_detector.py  simple_write_object_track_set.py  simple_write_track_descriptor_set.py
python/kwiver/vital/tests/cpp_helpers/: CMakeLists.txt  camera_perspective_helpers.cxx  camera_perspective_map_helpers.cxx  landmark_map_helpers.cxx
python/kwiver/vital/types/: CMakeLists.txt  __init__.py  activity.cxx  bounding_box.cxx  bounding_box.h  camera.cxx  camera_intrinsics.cxx  camera_map.cxx  camera_perspective.cxx  camera_perspective_map.cxx  camera_rpc.cxx  category_hierarchy_mod.cpp  category_hierarchy_mod_free_functions_py.cpp  category_hierarchy_py.cpp  color.cxx  descriptor.cxx  descriptor_set.cxx  detected_object.cxx  detected_object_set.cxx  feature_track_set.cxx  free_functions_py.cpp  kwiver_py.cpp  landmark.cxx  landmark_map.cxx  local_geo_cs.cxx  match_set.cxx  mesh.cxx  object_track_set.cxx  polygon.cxx  rotation.cxx  sfm_constraints.cxx  track.cxx  track_descriptor.cxx  track_set.cxx  vital_py.cpp  wrapper.cpp  wrapper_category_hierarchy_mod.cpp  wrapper_input.yml
python/kwiver/vital/types/configs/: camera_perspective_config.yml  local_cart_conf.yml
python/kwiver/vital/types/wrapper_inputs/: activity_wrapper_input.yml  bounding_box_input.yml  camera_input.yml  camera_perspective_input.yml  category_hierarchy_wrapper.yml  class_map_wrapper.yml  color_wrapper_input.yml  covariance_wrapper.yml  database_query_wrapper.yml  descriptors_wrapper.yml  detected_object_wrapper.yml  feature_mod_wrapper.yml  fundamental_matrix_wrapper.yml  geo_wrapper.yml  homography_wrapper.yml  iqr_wrapper.yml  local_cart_wrapper.yml  local_geo_cs_wrapper.yml  match_set_wrapper.yml  metadata_wrapper.yml  object_track_set_wrapper.yml  point_wrapper_input.yml  polygon_wrapper.yml  query_result_wrapper.yml  rotation_wrapper.yml  sfm_wrapper.yml  similarity_wrapper.yml  timestamp_wrapper.yml  track_wrapper.yml  transform_2d_wrapper.yml  uid_wrapper.yml
python/kwiver/vital/util/: entrypoint.py
vital/types/: covariance.h  detected_object.cxx  detected_object.h
